@@ -1,0 +1,31 @@
+<!--
+  ~ This file is part of Doodle Android.
+  ~
+  ~ Doodle Android is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ Doodle Android is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with Doodle Android. If not, see <http://www.gnu.org/licenses/>.
+  ~
+  ~ Copyright (c) 2019-2023 by Patrick Zedler
+  -->
+
+<vector
+  android:autoMirrored="true"
+  android:height="24dp"
+  android:tint="#000000"
+  android:viewportHeight="24"
+  android:viewportWidth="24"
+  android:width="24dp"
+  xmlns:android="http://schemas.android.com/apk/res/android">
+  <path
+    android:fillColor="@android:color/white"
+    android:pathData="M17,15h2L19,7c0,-1.1 -0.9,-2 -2,-2L9,5v2h7c0.55,0 1,0.45 1,1v7zM8,17c-0.55,0 -1,-0.45 -1,-1L7,2c0,-0.55 -0.45,-1 -1,-1s-1,0.45 -1,1v3L2,5c-0.55,0 -1,0.45 -1,1s0.45,1 1,1h3v10c0,1.1 0.9,2 2,2h10v3c0,0.55 0.45,1 1,1s1,-0.45 1,-1v-3h3c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1L8,17z" />
+</vector>
