@@ -1,0 +1,30 @@
+<!--
+  ~ This file is part of Doodle Android.
+  ~
+  ~ Doodle Android is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ Doodle Android is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with Doodle Android. If not, see <http://www.gnu.org/licenses/>.
+  ~
+  ~ Copyright (c) 2019-2023 by Patrick Zedler
+  -->
+
+<vector
+  android:height="24dp"
+  android:tint="#000000"
+  android:viewportHeight="24"
+  android:viewportWidth="24"
+  android:width="24dp"
+  xmlns:android="http://schemas.android.com/apk/res/android">
+  <path
+    android:fillColor="@android:color/white"
+    android:pathData="M12,10c-3.47,0 -6.36,2.54 -6.91,5.86 -0.1,0.6 0.39,1.14 1,1.14 0.49,0 0.9,-0.36 0.98,-0.85C7.48,13.79 9.53,12 12,12s4.52,1.79 4.93,4.15c0.08,0.49 0.49,0.85 0.98,0.85 0.61,0 1.09,-0.54 0.99,-1.14C18.36,12.54 15.47,10 12,10zM12,6C6.3,6 1.61,10.34 1.05,15.9c-0.05,0.59 0.41,1.1 1.01,1.1 0.51,0 0.94,-0.38 0.99,-0.88C3.49,11.57 7.34,8 12,8s8.51,3.57 8.96,8.12c0.05,0.5 0.48,0.88 0.99,0.88 0.59,0 1.06,-0.51 1,-1.1C22.39,10.34 17.7,6 12,6z" />
+</vector>
