@@ -1,0 +1,34 @@
+<!--
+  ~ This file is part of Doodle Android.
+  ~
+  ~ Doodle Android is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ Doodle Android is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with Doodle Android. If not, see <http://www.gnu.org/licenses/>.
+  ~
+  ~ Copyright (c) 2019-2023 by Patrick Zedler
+  -->
+
+<vector
+  android:autoMirrored="true"
+  android:height="24dp"
+  android:tint="#000000"
+  android:viewportHeight="24"
+  android:viewportWidth="24"
+  android:width="24dp"
+  xmlns:android="http://schemas.android.com/apk/res/android">
+  <path
+    android:fillColor="@android:color/white"
+    android:pathData="M21.65,7.65l-2.79,-2.79C18.54,4.54 18,4.76 18,5.21V7H4C3.45,7 3,7.45 3,8s0.45,1 1,1h14v1.79c0,0.45 0.54,0.67 0.85,0.35l2.79,-2.79C21.84,8.16 21.84,7.84 21.65,7.65z" />
+  <path
+    android:fillColor="@android:color/white"
+    android:pathData="M20,15H6v-1.79c0,-0.45 -0.54,-0.67 -0.85,-0.35l-2.79,2.79c-0.2,0.19 -0.2,0.51 -0.01,0.7l2.79,2.79C5.46,19.46 6,19.24 6,18.79V17h14c0.55,0 1,-0.45 1,-1S20.55,15 20,15z" />
+</vector>
